--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Perter Parker</a>
+            <a class="navbar-brand" href="#">Advait Anandh</a>
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
